# USB-serial-mouse-adapter

./: .gitignore  ChangeLog.md  README.md  README.md.bak  main.c  tusb_config.h
KiCad/: BOM_JLCSMT.xls  USB-2-232.kicad_pcb  USB-2-232.sch  USBtoserialpico.kicad_pcb  USBtoserialpico.pro  USBtoserialpico.sch  fp-lib-table
KiCad/Phat/: BOM_LCSC.xls  CPL_JLCSMT.xls  USB-2-232-USB-2-232Pcb_1509.stl  USB-2-232.pro  fp-lib-table  sym-lib-table
KiCad/Phat/USB-2-232_Footprints.pretty/: C_1206_3216MetricFlip.kicad_mod  LED_D3.0mm_ALRT.kicad_mod  PinHeader_ALT_PWR_IN.kicad_mod  PinHeader_ALT_SERIAL_OUT.kicad_mod  R_1206_3216Metric_LED.kicad_mod  R_1206_3216Metric_bridge.kicad_mod  SW_PUSH_6mm.kicad_mod  pfp-1050-v2.kicad_mod
KiCad/Slim/: USB-2-232-slim-cache.lib  USB-2-232-slim.kicad_pcb  USB-2-232-slim.kicad_pcb-bak  USB-2-232-slim.kicad_wks  USB-2-232-slim.pro  USB-2-232-slim.sch  USB-2-232-slim.sch-bak  fp-info-cache  fp-lib-table
KiCad/Slim/USB-2-232-slim_Footprints.pretty/: C_0805_2012Metric.kicad_mod  C_0805_2012MetricFlip.kicad_mod  LED_1206_3216Metric.kicad_mod  PinHeader_ALT_PWR_IN.kicad_mod  R_0805_2012Metric.kicad_mod  R_0805_2012Metric_bridge.kicad_mod  R_0805_2012Metric_bridgeflip.kicad_mod  SMT_RESET_SW.kicad_mod  SW_DIP_SPSTx06_Slide_9.78x17.42mm_W7.62mm_P2.54mm.kicad_mod  SolderJumper_MAX232_5v-3v3_switch.kicad_mod  TestPoint_Pad_1.5x1.5mm.kicad_mod  USB_A_Wuerth_614004134726_Horizontal.kicad_mod
KiCad/USB-2-232_Footprints.pretty/: C_1206_3216Metric.kicad_mod  JLCPCB mounting hole.kicad_mod  PinHeader_ALT_SERIAL_OUT.kicad_mod  PinHeader_ALT_SERIAL_OUT_V2.kicad_mod  PinHeader_ALT_USB_IN.kicad_mod  RPi_Pico_SMD_THv2.kicad_mod  pfp-1050-flip.kicad_mod
KiCad/USBPICO_Footprints.pretty/: LED_D3.0mm_PWR.kicad_mod  PinHeader_ALT_SERIAL_OUT.kicad_mod  R_1206_3216Metric.kicad_mod  R_1206_3216Metric_LED.kicad_mod  R_1206_3216Metric_bridgeflip.kicad_mod  max232_SMD.kicad_mod
binary/: pi232mouse.uf2  usb-2-232-ver_1.2.2_EN.uf2  usb-2-232-ver_1.3.2_DE.uf2  usb-2-232-ver_1.3.2_EN.uf2  usb-2-232.uf2
binary/Drivers/: README.MD
binary/Drivers/CTMouse2.0a4/: README.MD
binary/Drivers/FreeDOS/CTMouse191/: README.MD
binary/Drivers/FreeDOS/CTMouse2.1b4/: README.MD
binary/Drivers/MS-DOS/mouse610/: ByteLocations.txt
binary/Drivers/MS-DOS/mouse624/: bytelocations.txt
binary/Drivers/MS-DOS/mouse820/: byteLocations.txt
binary/Drivers/Microsoft IntelliPoint/version 1.1/: ReadMe.md
binary/Drivers/Microsoft IntelliPoint/version 2.2/: ReadMe.md  byte location.txt
binary/Drivers/WIN95C/: Byte locations.txt  ReadMe.md
binary/Drivers/WIN95C/1200/: vmouse.vxd
binary/Drivers/WIN95C/19200/: vmouse.vxd
binary/Drivers/WIN95C/2400/: vmouse.vxd
binary/Drivers/WIN98FE/: ReadMe.md  bytelocation.txt
binary/Drivers/WIN98FE/4800/: vmouse.vxd
binary/Drivers/WIN98FE/9600/: vmouse.vxd
binary/Drivers/WIN98SE/4.10.2222/: Bytelocation.txt  ReadMe.md
binary/Drivers/WIN98SE/4.10.2225/: ByteLocation.txt  ReadMe.md
binary/Drivers/WINME/: ReadMe.md
binary/Drivers/WINME/1200/: VMOUSE.VXD
binary/Drivers/WINME/2400/: VMOUSE.VXD
binary/Drivers/WINME/9600/: VMOUSE.VXD
binary/Drivers/Win3.1/: Readme.txt
binary/Drivers/Win3.1/1200/: MOUSE.DRV
binary/Drivers/Win3.1/19200/: MOUSE.DRV
binary/Drivers/Win3.1/2400/: MOUSE.DRV
binary/Drivers/Win3.1/4800/: MOUSE.DRV
binary/Drivers/Win3.1/9600/: MOUSE.DRV
binary/Drivers/Windows 9.x/WIN95/: ReadMe.md
binary/old version/: README.md  old-usb-2-232-VER_1.0.0.uf2  old-usb-2-232-VER_1.1.1.uf2  usb-2-232-ver_1.2.2_DE.uf2
cases/Phat Board/Internal/: Case-Internal-Lid.stl  Case-Internal-Sled.stl
firmware/: CMakeLists.txt  default_config.h  main.c  tusb_config.h  usb-2-232.c
firmware/TinyUSB/tinyusb/src/class/hid/: hid_host.c
firmware/include/: core_1.c  core_1.h  ctypes.h  hid_app.c  hid_app.h  serial.c  serial.h  utils.c  utils.h  version.h
include/: ctypes.h  utils.c  utils.h
(+46 files in other folders)
